--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -22,14 +22,18 @@ body{
 
 section{
     display: inline-block;
-    width: 50%;
-    margin: auto
+    width: 45%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1em 1em 10em 1em;
 }
 
 #right-block{
     text-align: right;
-    width: fit-content;
-    /* padding-left: 10%; */
+    /* height: 10%;
+    width: auto;
+    object-fit: contain; */
 }
 
 /* Nav Bar */
@@ -48,4 +52,6 @@ li{
 
 #main-pic{
     width: 100%;
+    height: 50%;
+    object-fit: contain;
 }
